fixed main-content layout problems

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     display: grid;
     margin: 0 auto;
     grid-template-columns: 600px 600px 600px;
-    grid-template-rows: 250px 800px;
+    grid-template-rows: 250px 1050px;
     row-gap: 1.6em;
 }
 
@@ -40,8 +40,25 @@
     margin: -20px 300px 0 0;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 200px 200px 200px 200px;
+    grid-template-rows: 200px  400px  300px  200px;
 }
+
+.biography{
+    grid-row: 1;
+}
+
+.experience{
+    grid-row: 2;
+}
+
+.education{
+    grid-row: 3;
+}
+
+.skills{
+    grid-row: 4;
+}
+
 
 .words{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -57,21 +74,23 @@ img {
 
 .experience, .education{
     display: flex;
-    justify-content: space-evenly;
-    align-content: space-evenly;
     flex-direction: column;
 }
 
 .yr{
     float: left;
-    width: 220px;
+    width: 20%;
 }
 
 .sdy{
     float: right;
+    display: flex;
+    flex-direction: column;
+    margin-top: -5px;
+    width: 80%;
 }
 
-.experience div, .education div{
+.exeItem, .eduItem{
     display: flex;
     justify-content: flex-start;
     align-content: flex-start;
@@ -83,14 +102,19 @@ ul{
     float: center;
 }
 
+li{
+    padding: 6px 0;
+}
+
 li:before{
-    content:".";
+    content: "•";
 }
 
 hr{
-    
-
-
+    border-top:  3px solid lightgrey;
+    margin-bottom: 10px;
+    margin-left: 0;
+    margin-right: 45px;
 }
 
 .sidebar hr{
